# hidebox

./: Cargo.toml  Makefile  README.md  README.zh-CN.md
.github/workflows/: action.yml
hidebox/: Cargo.toml
hidebox/src/: main.rs
hidebox/src/config/: conf.rs  data.rs  mod.rs
hidebox/src/file/: decode.rs  encode.rs  mod.rs
hidebox/src/logic/: about.rs  decode.rs  encode.rs  mod.rs  ok_cancel_dialog.rs  password_dialog.rs  setting.rs  util.rs
hidebox/src/util/: crypto.rs  mod.rs  number.rs  str.rs  translator.rs
hidebox/ui/: appwindow.slint  logic.slint  store.slint  translator.slint  util.slint
hidebox/ui/base/: mcard.slint
hidebox/ui/dialog/: help.slint  password.slint
hidebox/ui/dialog/setting/: dialog.slint
hidebox/ui/panel/: header.slint  panel.slint
hidebox/ui/panel/bodyer/: decode.slint  encode.slint  panel.slint
win/: version.h
