[package]
name = "hidebox"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
clipboard = "0.5"
platform-dirs = "0.3"
crypto-hash = "0.3"
aes = "0.7"
block-modes = "0.8"
rand = "0.8"
native-dialog = "0.6"

tokio = {version = "1.35", features = ["full", "fs"]}
slint = { version = "1.3", features = ["log"] }

[build-dependencies]
slint-build = "1.3"
cmd_lib = "1.9"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

